--- a/packages/docs/src/styles/global.css
+++ b/packages/docs/src/styles/global.css
@@ -11,3 +11,42 @@
   white-space: nowrap;
   border-width: 0;
 }
+
+.token-table {
+  table-layout: auto;
+  width: 100%;
+
+  border-collapse: collapse;
+
+  font-family: 'Nunito Sans', sans-serif;
+  color: #C9CDCF;
+}
+
+.token-table__title {
+  text-align: start;
+  padding-block: 1rem;
+}
+
+.token-table__row > *:first-child {
+  padding-inline-start: 0;
+  padding-inline-end: 1rem;
+}
+
+.token-table__row > :is(th, td) {
+  text-align: left;
+
+  padding-block: 0.75rem;
+  padding-inline: 1rem;
+}
+
+.token-table__body > .token-table__row {
+  border-block-width: 1px;
+  border-block-style: solid;
+  border-block-color: #323238;
+}
+
+@media (max-width: 640px) {
+  .token-table__data-preview {
+    display: none;
+  }
+}
